# ttft-bench

./: .dockerignore  CLAUDE.md  README.md  compare_results.py  pyproject.toml  run_benchmark.sh  serve_kimi_k2.sh  system_profile.py  ttft_bench.py
docker/benchmark/: Dockerfile  entrypoint.sh
docker/server/: Dockerfile  entrypoint.sh
k8s/: benchmark-job.yaml  namespace.yaml  server-deployment.yaml  server-service.yaml
